Add /apis/{apiId}/swagger/{resourceName}
